changed config to use mcp server remote

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ logging.pattern.console=%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread])
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 logging.level.org.springframework.ai.chat.client.advisor=DEBUG
 
-spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers.json
+#spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers.json
+spring.ai.mcp.client.sse.connections.helpdesk.url=http://localhost:6060
